--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 	<title id='title'>Download sif cards from schoolido.lu</title>
-	<script src='https://cdnjs.cloudflare.com/ajax/libs/jszip/3.5.0/jszip.min.js'></script>
-	<script src='http://localhost:8887/data/html-editor/FileSaver.js'></script>
+	<script src='jszip.min.js'></script>
+	<script src='FileSaver.js'></script>
 </head>
 <body>
 	<button id='buttno' onclick='downloadImages()'>Download</button>
