Bug fix (I hope) and more features

--- a/index.html
+++ b/index.html
@@ -10,12 +10,41 @@
 	<p id='counting'></p>
 	<br>
 	<p id='scanPrc'></p>
+	<br>
+	<div id='settings'>
+		<p>Start at </p><input id="startAt" type='number' value='1'>
+		<p>End At</p><input id="totalCards" type='number' value='2816'><br><br>
+		<input type="checkbox" id="developer" name="developer" value="developer">
+		<label for="developer">Developer Mode</label><br>
+	</div>
 	<br><br>
 	<ul id='cards'></ul>
 	<script>
+		fetch('knownCards.json').then( function(response) {
+			if (response.status == 200) {
+				response.blob().then( function(blob){
+					var reader = new FileReader()
+					reader.onload = function(e) {
+						try {
+							window.knownCards = JSON.parse(e.target.result)
+						} catch(e) {
+							var p = document.createElement('h1')
+							p.innerHTML = 'Json Parse Error of cards list'
+							cardList.appendChild(p)
+							document.getElementById('settings').style = 'display:none'
+							document.getElementById('buttno').remove()
+						}
+					}
+					reader.readAsText(blob)
+				})
+			}
+		})
 	function downloadImages(name) {
+		var knownCards = window.knownCards
 		var totalCards = 2816
-		this.amountDone = 0
+		if (document.getElementById('totalCards').value && document.getElementById('totalCards').value != '') {
+			var totalCards = document.getElementById('totalCards').value
+		}
 		var chars = [
 					 {
 						"name": "idolizedEli"
@@ -127,8 +156,10 @@
 					 }
 					]
 			// need to add Nijigasaki
-			
+		//console.log(chars.length)
+		//return
 		var zip = new JSZip()
+		document.getElementById('settings').style = 'display:none'
 		document.getElementById('buttno').remove()
 		var cardList = document.getElementById('cards')
 		var counting = document.getElementById('counting')
@@ -139,56 +170,79 @@
 			document.getElementById('cards').removeChild(document.getElementById('cards').firstChild);
 		}
 		function finished() {
-			if (this.amountDone == chars.length) {
-				alert('Downloading finished. Total of '+this.o+' cards')
+			this.amountDone++
+			console.clear()
+			if (document.getElementById('developer').checked) {
 				var p = document.createElement('li')
-				var blob = new Blob([JSON.stringify(this.cards)], {type : 'application/json'})
-				p.innerHTML = '<a href="'+URL.createObjectURL(blob)+'" target="_blank">card list</a>'
+				p.innerHTML = 'Finished'
 				cardList.appendChild(p)
+			}
+			console.log(this.amountDone)
+			if (this.amountDone == 36) {
+				alert('Downloading finished. Total of '+this.o+' cards')
+				if (document.getElementById('developer').checked) {
+					var p = document.createElement('li')
+					var blob = new Blob([JSON.stringify(this.cards)], {type : 'application/json'})
+					p.innerHTML = '<a href="'+URL.createObjectURL(blob)+'" target="_blank">card list</a>'
+					cardList.appendChild(p)
+				}
 				scanPrc.innerHTML = 'Generating Zip'
 				zip.generateAsync({type:"blob"}).then(function(content) {
-					saveAs(content, "Anime Cards.zip");
+					saveAs(content, "Anime Cards.zip")
 					scanPrc.innerHTML = 'zip file downloaded'
 				})
 			}
 		}
 		function Download(name, t) {
 				var i=0
+				if (document.getElementById('startAt').value) {
+					var i = document.getElementById('startAt').value
+				}
 				function checkSend() {
-					fetch('https://i.schoolido.lu/c/'+i+name+'.png').then(response => {
-						if (response.status == 200) {
-							response.blob().then(blob => {
-								var p = document.createElement('li')
-								p.innerHTML = '<a href="'+URL.createObjectURL(blob)+'" target="_blank">'+i+name+'.png</a>'
-								cardList.appendChild(p)
-								this.cards[name].push(i)
-								t.file(i+name+'.png', blob);
+					if (knownCards[name].includes(i)) {
+						fetch('https://i.schoolido.lu/c/'+i+name+'.png').then(response => {
+							if (response.status == 200) {
+								response.blob().then(blob => {
+									var p = document.createElement('li')
+									p.innerHTML = '<a href="'+URL.createObjectURL(blob)+'" target="_blank">'+i+name+'.png</a>'
+									cardList.appendChild(p)
+									this.cards[name].push(i)
+									t.file(i+name+'.png', blob);
+									if (i != totalCards) {
+										i++
+										checkSend()
+									} else {
+										finished()
+									}
+								})
+								this.o++
+								counting.innerHTML = 'Amount Downloaded: '+this.o
+								title.innerHTML = 'Amount Downloaded: '+this.o
+							} else {
 								if (i != totalCards) {
 									i++
 									checkSend()
 								} else {
-									this.amountDone++
 									finished()
 								}
-							})
-							this.o++
-							counting.innerHTML = 'Amount Downloaded: '+this.o
-						} else {
-							if (i != totalCards) {
-								i++
-								checkSend()
-							} else {
-								this.amountDone++
-								finished()
 							}
+						})
+					} else {
+						if (i != totalCards) {
+							i++
+							checkSend()
+						} else {
+							finished()
 						}
-					})
+					}
 				}
 				i++
 				checkSend()
 		}
 		this.cards = { }
+		this.chars = chars
 		this.o = 0
+		this.amountDone = 0
 		for (var t=0; t<chars.length; t++) {
 			this.cards[chars[t].name] = [ ]
 			if (chars[t].name.substring(0, 8) == 'idolized') {
