--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<p>End At</p><input id="totalCards" type='number' value='2816'><br><br>
 		<input type="checkbox" id="developer" name="developer" value="developer">
 		<label for="developer">Developer Mode</label><br>
+		<p>Name of zip file</p><input id="zipName" type='text' value='Love Live Anime Cards'>
 	</div>
 	<br><br>
 	<ul id='cards'></ul>
@@ -187,8 +188,12 @@
 					cardList.appendChild(p)
 				}
 				scanPrc.innerHTML = 'Generating Zip'
+				var name = document.getElementById('zipName').value
+				if (!name || name == '') {
+					name = 'Love Live Anime Cards'
+				}
 				zip.generateAsync({type:"blob"}).then(function(content) {
-					saveAs(content, "Anime Cards.zip")
+					saveAs(content, name+".zip")
 					scanPrc.innerHTML = 'zip file downloaded'
 				})
 			}
