--- a/index.html
+++ b/index.html
@@ -188,11 +188,12 @@
 					cardList.appendChild(p)
 				}
 				scanPrc.innerHTML = 'Generating Zip'
-				var name = document.getElementById('zipName').value
-				if (!name || name == '') {
-					name = 'Love Live Anime Cards'
-				}
 				zip.generateAsync({type:"blob"}).then(function(content) {
+					var name = document.getElementById('zipName').value
+					if (!name || name == '') {
+						name = 'Love Live Anime Cards'
+					}
+					console.log('a')
 					saveAs(content, name+".zip")
 					scanPrc.innerHTML = 'zip file downloaded'
 				})
