--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 			// need to add Nijigasaki
 		//console.log(chars.length)
 		//return
-		window.zip = new JSZip()
+		var zip = new JSZip()
 		document.getElementById('settings').style = 'display:none'
 		document.getElementById('buttno').remove()
 		var cardList = document.getElementById('cards')
@@ -186,7 +186,7 @@
 					cardList.appendChild(p)
 				}
 				scanPrc.innerHTML = 'Generating Zip'
-				window.zip.generateAsync({type:"blob"}).then(function(content) {
+				zip.generateAsync({type:"blob"}).then(function(content) {
 					saveAs(content, "Anime Cards.zip")
 					scanPrc.innerHTML = 'zip file downloaded'
 				})
@@ -249,7 +249,7 @@
 			} else {
 				var a = chars[t].name
 			}
-			var folder = window.zip.folder(a)
+			var folder = zip.folder(a)
 			Download(chars[t].name, folder)
 		}
 	}
