--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 				cardList.appendChild(p)
 			}
 			console.log(this.amountDone)
-			if (this.o == 3708) {
+			if (this.o == 3708 || this.amountDone == 36) {
 				alert('Downloading finished. Total of '+this.o+' cards')
 				if (document.getElementById('developer').checked) {
 					var p = document.createElement('li')
