--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 		<label for="developer">Developer Mode</label><br>
 		<input type="checkbox" id="deepScan" name="deepScan" value="deepScan">
 		<label for="deepScan">Don't use list of known cards (Not recommended)</label><br>
-	</div>
-	<button onclick='zipFile()' id='zippFilee' style='display:none'>Stop Downloading and zip</button>
+	</div><br>
+	<button onclick='zipFile()' id='zippFilee' style='display:none'>Stop Downloading and zip (You will need to press when done. Auto download not supported yet.)</button>
 	<br><br>
 	<ul id='cards'></ul>
 	<script>
@@ -47,6 +47,7 @@
 			}
 		})
 		function zipFile() {
+			document.getElementById('zippFilee').style = 'display:none'
 			window.download = false
 			if (document.getElementById('developer').checked) {
 				var p = document.createElement('li')
