--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		for (var t=0; t<chars.length; t++) {
 			this.cards[chars[t]] = [ ]
 			if (chars[t].substring(0, 8) == 'idolized') {
-				var a = chars[t].substring(8, chars[t].name.length)
+				var a = chars[t].substring(8, chars[t].length)
 			} else {
 				var a = chars[t]
 			}
