--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 	<p id='scanPrc'></p>
 	<br>
 	<div id='settings'>
-		<p>Start at </p><input id="startAt" type='number' value='1'>
+		<p>Start at </p><input id="startAt" type='number' value='0'>
 		<p>End At</p><input id="totalCards" type='number' value='2817'><br><br>
 		<input type="checkbox" id="developer" name="developer" value="developer">
 		<label for="developer">Developer Mode</label><br>
 		<input type="checkbox" id="deepScan" name="deepScan" value="deepScan">
 		<label for="deepScan">Don't use list of known cards (Not recommended)</label><br>
 	</div><br>
-	<button onclick='zipFile()' id='zippFilee' style='display:none'>Stop Downloading and zip (You will need to press when done. Auto download not supported yet.)</button>
+	<button onclick='zipFile()' id='zippFilee' style='display:none'>Stop Downloading and zip</button>
 	<br><br>
 	<ul id='cards'></ul>
 	<script>
@@ -51,77 +51,78 @@
 			window.download = false
 			if (document.getElementById('developer').checked) {
 				var p = document.createElement('li')
-				var blob = new Blob([JSON.stringify(this.cards)], {type : 'application/json'})
+				var blob = new Blob([JSON.stringify(cards)], {type : 'application/json'})
 				p.innerHTML = '<a href="'+URL.createObjectURL(blob)+'" target="_blank">card list</a>'
 				cardList.appendChild(p)
 			}
 			scanPrc.innerHTML = 'Generating Zip'
-			zip.generateAsync({type:"blob"}).then(function(content) {
+			zip.generateAsync({type:"blob", comment: "Downloaded with https://ethanaobrien.github.io/sif-card-downloader/index.html"}, function updateCallback(metadata) {
+				scanPrc.innerHTML = "Zipping File: " + metadata.percent.toFixed(2) + " %"
+			}).then(function(content) {
 				saveAs(content, "Anime Cards.zip")
-				scanPrc.innerHTML = 'zip file downloaded'
-			})	
+				scanPrc.innerHTML = 'zip file downloaded - DO NOT CLOSE THIS PAGE until the download completes or you will need to repeat this entire process'
+			})
 		}
 	function downloadImages(name) {
-		var knownCards = window.knownCards
 		var totalCards = 2817
 		if (document.getElementById('totalCards').value && document.getElementById('totalCards').value != '') {
 			var totalCards = document.getElementById('totalCards').value
 		}
-		var chars = [
-						"idolizedEli",
-						"Eli",
-						"idolizedHanayo",
-						"Hanayo",
-						"idolizedHonoka",
-						"Honoka",
-						"idolizedKotori",
-						"Kotori",
-						"idolizedMaki",
-						"Maki",
-						"idolizedNico",
-						"Nico",
-						"idolizedNozomi",
-						"Nozomi",
-						"idolizedRin",
-						"Rin",
-						"idolizedUmi",
-						"Umi",
-						"idolizedChika",
-						"Chika",
-						"idolizedHanamaru",
-						"Hanamaru",
-						"idolizedDia",
-						"Dia",
-						"nidolizedKanan",
-						"Kanan",
-						"idolizedMari",
-						"Mari",
-						"idolizedRiko",
-						"Riko",
-						"idolizedRuby",
-						"Ruby",
-						"idolizedYoshiko",
-						"Yoshiko",
-						"idolizedYou",
-						"You",
-						"idolizedAi",
-						"Ai",
-						"idolizedAyumu",
-						"Ayumu",
-						"idolizedEmma",
-						"Emma",
-						"idolizedKanata",
-						"Kanata",
-						"idolizedKarin",
-						"Karin",
-						"idolizedKasumi",
-						"Kasumi",
-						"idolizedRina",
-						"Rina",
-						"idolizedSetsuna",
-						"Setsuna",
-						"idolizedShizuku",
-						"Shizuku"
+		window.chars = [
+						["idolizedEli", "Muse"],
+						["Eli", "Muse"],
+						["idolizedHanayo", "Muse"],
+						["Hanayo", "Muse"],
+						["idolizedHonoka", "Muse"],
+						["Honoka", "Muse"],
+						["idolizedKotori", "Muse"],
+						["Kotori", "Muse"],
+						["idolizedMaki", "Muse"],
+						["Maki", "Muse"],
+						["idolizedNico", "Muse"],
+						["Nico", "Muse"],
+						["idolizedNozomi", "Muse"],
+						["Nozomi", "Muse"],
+						["idolizedRin", "Muse"],
+						["Rin", "Muse"],
+						["idolizedUmi", "Muse"],
+						["Umi", "Muse"],
+						["idolizedChika", "Aqours"],
+						["Chika", "Aqours"],
+						["idolizedHanamaru", "Aqours"],
+						["Hanamaru", "Aqours"],
+						["idolizedDia", "Aqours"],
+						["Dia", "Aqours"],
+						["idolizedKanan", "Aqours"],
+						["Kanan", "Aqours"],
+						["idolizedMari", "Aqours"],
+						["Mari", "Aqours"],
+						["idolizedRiko", "Aqours"],
+						["Riko", "Aqours"],
+						["idolizedRuby", "Aqours"],
+						["Ruby", "Aqours"],
+						["idolizedYoshiko", "Aqours"],
+						["Yoshiko", "Aqours"],
+						["idolizedYou", "Aqours"],
+						["You", "Aqours"],
+						["idolizedAi", "Nijigasaki"],
+						["Ai", "Nijigasaki"],
+						["idolizedAyumu", "Nijigasaki"],
+						["Ayumu", "Nijigasaki"],
+						["idolizedEmma", "Nijigasaki"],
+						["Emma", "Nijigasaki"],
+						["idolizedKanata", "Nijigasaki"],
+						["Kanata", "Nijigasaki"],
+						["idolizedKarin", "Nijigasaki"],
+						["Karin", "Nijigasaki"],
+						["idolizedKasumi", "Nijigasaki"],
+						["Kasumi", "Nijigasaki"],
+						["idolizedRina", "Nijigasaki"],
+						["Rina", "Nijigasaki"],
+						["idolizedSetsuna", "Nijigasaki"],
+						["Setsuna", "Nijigasaki"],
+						["idolizedShizuku", "Nijigasaki"],
+						["Shizuku", "Nijigasaki"]
 					]
 			// need to add Nijigasaki
 		var m = new JSZip()
@@ -152,26 +153,32 @@
 									var p = document.createElement('li')
 									p.innerHTML = '<a href="'+URL.createObjectURL(blob)+'" target="_blank">'+i+name+'.png</a>'
 									cardList.appendChild(p)
-									this.cards[name].push(i)
+									cards[name].push(i)
 									t.file(i+name+'.png', blob);
 									if (i != totalCards) {
 										i++
 										checkSend()
 									} else {
-										this.finished++
-										scanPrc.innerHTML = this.finished+'/'+this.chars.length+' downloaded. Once everything is completed, click the zip button'
+										finished++
+										scanPrc.innerHTML = finished+'/'+chars.length+' downloaded.'
+										if (finished == chars.length) {
+											zipFile()
+										}
 									}
 								})
-								this.o++
-								counting.innerHTML = 'Amount Downloaded: '+this.o
-								title.innerHTML = 'Amount Downloaded: '+this.o
+								o++
+								counting.innerHTML = 'Amount Downloaded: '+o
+								title.innerHTML = 'Amount Downloaded: '+o
 							} else {
 								if (i != totalCards) {
 									i++
 									checkSend()
 								} else {
-									this.finished++
-									scanPrc.innerHTML = this.finished+'/'+this.chars.length+' downloaded. Once everything is completed, click the zip button'
+									finished++
+									scanPrc.innerHTML = finished+'/'+chars.length+' downloaded.'
+								if (finished == chars.length) {
+									zipFile()
+								}
 								}
 							}
 						})
@@ -180,29 +187,32 @@
 							i++
 							checkSend()
 						} else {
-							this.finished++
-							scanPrc.innerHTML = this.finished+'/'+this.chars.length+' downloaded. Once everything is completed, click the zip button'
+							finished++
+							scanPrc.innerHTML = finished+'/'+chars.length+' downloaded.'
+							if (finished == chars.length) {
+								zipFile()
+							}
 						}
 					}
 				}
 				i++
 				checkSend()
 		}
-		this.cards = { }
-		this.chars = chars
-		this.o = 0
+		window.cards = { }
+		window.o = 0
 		window.download = true
-		this.finished = 0
-		this.amountDone = 0
+		window.finished = 0
 		for (var t=0; t<chars.length; t++) {
-			this.cards[chars[t]] = [ ]
-			if (chars[t].substring(0, 8) == 'idolized') {
-				var a = chars[t].substring(8, chars[t].length)
+			cards[chars[t][0]] = [ ]
+			console.log(chars[t][0])
+			if (chars[t][0].substring(0, 8) == 'idolized') {
+				var a = chars[t][0].substring(8, chars[t][0].length)
 			} else {
-				var a = chars[t]
+				var a = chars[t][0]
 			}
-			var folder = zip.folder(a)
-			Download(chars[t], folder)
+			var groupFolder = zip.folder(chars[t][1])
+			var folder = groupFolder.folder(a)
+			Download(chars[t][0], folder)
 		}
 	}
 	</script>
