--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
 		<label for="developer">Developer Mode</label><br>
 		<input type="checkbox" id="deepScan" name="deepScan" value="deepScan">
 		<label for="deepScan">Don't use list of known cards (Not recommended)</label><br>
-		<br><br>
-		<p>To View More Card Details, Visit <a href='https://schoolido.lu/cards/'>schoolidol.lu/cards/</a>!</p>
+		<br>
+		<p>To View More Card Details, Visit <a href='https://schoolido.lu/cards/' target="_blank">schoolidol.lu/cards/</a></p>
 	</div><br>
 	<button onclick='zipFile()' id='zippFilee' style='display:none'>Stop Downloading and zip</button>
 	<br><br>
